--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
 
-  <h1>Anh có điều muốn nói</h1>
-  <button id="playButton" onclick="generateRandomNotifications()">Nhấn đây nè</button>
+  <h1>Khim có điều muốn nói👉👈</h1>
+  <button id="playButton" onclick="generateRandomNotifications()">Nhấn zô đây😾</button>
   <div class="final-message" id="finalMessage" onclick="redirectToNewPage()">
     <p id="text1"></p>
     <p id="text2"></p>
